--- a/demo-cluster/.k8s-gen/app-manifest.yaml
+++ b/demo-cluster/.k8s-gen/app-manifest.yaml
@@ -1,51 +1,29 @@
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: game-2048
-  namespace: argocd
-spec:
-  destination:
-    namespace: demo
-    server: https://kubernetes.default.svc
-  project: user
-  revisionHistoryLimit: 3
-  source:
-    repoURL: http://daocloud.github.io/dao-2048/
-    chart: dao-2048
-    targetRevision: "1.2.1"
-    helm:
-      values: |
-        replicaCount: 1
+# ---
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: game-2048
+#   namespace: argocd
+# spec:
+#   destination:
+#     namespace: demo
+#     server: https://kubernetes.default.svc
+#   project: user
+#   revisionHistoryLimit: 3
+#   source:
+#     repoURL: http://daocloud.github.io/dao-2048/
+#     chart: dao-2048
+#     targetRevision: "1.2.1"
+#     helm:
+#       values: |
+#         replicaCount: 1
 
-        nodeSelector:
-          kubernetes.io/hostname: kind-worker
+#         nodeSelector:
+#           kubernetes.io/hostname: kind-worker
 
-        service:
-          type: LoadBalancer
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: kyverno
-  namespace: argocd
-spec:
-  destination:
-    namespace: kyverno
-    server: https://kubernetes.default.svc
-  project: platform
-  revisionHistoryLimit: 3
-  source:
-    repoURL: https://kyverno.github.io/kyverno
-    chart: kyverno
-    targetRevision: "*"
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - ServerSideApply=true
+#         service:
+#           type: LoadBalancer
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
