--- a/demo-cluster/.k8s-gen/platform-manifests.yaml
+++ b/demo-cluster/.k8s-gen/platform-manifests.yaml
@@ -63,3 +63,25 @@ spec:
   sourceRepos:
     - http://daocloud.github.io/dao-2048/
   clusterResourceWhitelist: []
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: kyverno
+  namespace: argocd
+spec:
+  destination:
+    namespace: kyverno
+    server: https://kubernetes.default.svc
+  project: platform
+  revisionHistoryLimit: 3
+  source:
+    repoURL: https://kyverno.github.io/kyverno
+    chart: kyverno
+    targetRevision: "*"
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - ServerSideApply=true
