--- a/demo-resources/scenario-1/1-game-app-fixed.yaml
+++ b/demo-resources/scenario-1/1-game-app-fixed.yaml
@@ -1,33 +1,8 @@
 ---
-apiVersion: argoproj.io/v1alpha1
-kind: AppProject
-metadata:
-  name: user
-  namespace: argocd
-spec:
-  description: User project
-  destinations:
-    - server: https://kubernetes.default.svc
-      namespace: game-2048
-  sourceRepos:
-    - http://daocloud.github.io/dao-2048/
----
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: game-2048
----
-apiVersion: v1
-kind: ResourceQuota
-metadata:
-  name: compute-quota
-  namespace: game-2048
-spec:
-  hard:
-    requests.cpu: "1"  
-    requests.memory: "1Gi" 
-    limits.cpu: "1"  
-    limits.memory: "1Gi" 
+  name: demo-oss-japan
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -36,34 +11,28 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: game-2048
+    namespace: demo-oss-japan
     server: https://kubernetes.default.svc
   project: user
   revisionHistoryLimit: 3
   sources:
-  - chart: dao-2048
-    helm:
-      values: |
-        replicaCount: 1
-
-        resources: 
-          limits:
-            cpu: 500m
-            memory: 128Mi
-          requests:
-            cpu: 100m
-            memory: 128Mi
-
-        nodeSelector:
-          kubernetes.io/hostname: kind-worker
-        
-        service:
-          type: LoadBalancer
-
-    repoURL: http://daocloud.github.io/dao-2048/
-    targetRevision: "1.2.1"
+    - chart: dao-2048
+      helm:
+        values: |
+          resources:
+            limits:
+              cpu: 500m
+              memory: 128Mi
+            requests:
+              cpu: 100m
+              memory: 128Mi
+          securityContext:
+            runAsNonRoot: true
+          service:
+            type: LoadBalancer
+      repoURL: http://daocloud.github.io/dao-2048/
+      targetRevision: "1.2.1"
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
-
