--- a/demo-cluster/.k8s-gen/app-manifests.yaml
+++ b/demo-cluster/.k8s-gen/app-manifests.yaml
@@ -28,6 +28,7 @@ spec:
               memory: 128Mi
           securityContext:
             runAsNonRoot: true
+            runAsUser: 1000
           service:
             type: LoadBalancer
       repoURL: http://daocloud.github.io/dao-2048/
