--- a/demo-resources/scenario-1/1-game-app-fixed.yaml
+++ b/demo-resources/scenario-1/1-game-app-fixed.yaml
@@ -19,14 +19,16 @@ spec:
     - chart: dao-2048
       helm:
         values: |
-          limits:
-            cpu: 100m
-            memory: 128Mi
-          requests:
-            cpu: 100m
-            memory: 128Mi
+          resources:
+            limits:
+              cpu: 100m
+              memory: 128Mi
+            requests:
+              cpu: 100m
+              memory: 128Mi
           securityContext:
             runAsNonRoot: true
+            runAsUser: 101
           service:
             type: LoadBalancer
       repoURL: http://daocloud.github.io/dao-2048/
