--- a/demo-resources/scenario-1/1-game-app-fixed.yaml
+++ b/demo-resources/scenario-1/1-game-app-fixed.yaml
@@ -27,8 +27,7 @@ spec:
               cpu: 100m
               memory: 128Mi
           securityContext:
-            runAsNonRoot: true
-            runAsUser: 101
+            allowPrivilegeEscalation: false
           service:
             type: LoadBalancer
       repoURL: http://daocloud.github.io/dao-2048/
